# forgotten-7drl

./: .appveyor.yml  Cargo.toml  README.md  Trunk.toml  forgotten_web-13a2c768b46188de.js  forgotten_web-2a29efe995be3c24.js  forgotten_web-2be6cf57b797655c.js  index.html  orbital_decay_web-61d43e7c05f5a5ca.js  rust-toolchain.toml  rustfmt.toml
.github/workflows/: release-gh-pages.yml  release-native.yml
app/: Cargo.toml
app/src/: action.rs  color.rs  controls.rs  game_instance.rs  game_loop.rs  lib.rs  rng.rs  storage.rs
app/src/audio/: mod.rs
app/src/instances/: examine.rs  gameover.rs  main_menu.rs  mod.rs  options.rs  paused.rs  playing.rs  prompt.rs  weapon.rs  win.rs
app/src/instances/menus/: main_menu.rs  mod.rs  paused.rs  prologue.rs  prompt.rs  upgrade.rs
app/src/render/: character.rs  color.rs  examine.rs  menu.rs  mod.rs  text.rs
app/src/render/ui/: log.rs  mod.rs  queries.rs
audio-data/: Cargo.toml
audio-data/src/: lib.rs
forgotten/: Cargo.toml
forgotten/src/: ai.rs  behavior.rs  event.rs  flow.rs  lib.rs  log.rs  player.rs  prompt.rs  rng.rs  visibility.rs
forgotten/src/sound/: mod.rs
forgotten/src/state/: fire.rs  get.rs  mod.rs  prompt.rs  running.rs  upgrade.rs
forgotten/src/terrain/: cave.rs  mod.rs  npc.rs  procgen.rs  rooms.rs  terrain.txt  visibility.rs
forgotten/src/terrain/builders/: cave.rs  mod.rs  rooms.rs
forgotten/src/terrain/levels/: first_floor.txt  mod.rs
forgotten/src/witness/: mod.rs  prompt.rs  running.rs
forgotten/src/world/: components.rs  explosion.rs  mod.rs  query.rs  render.rs  resource.rs  spatial.rs  spawner.rs  visibility.rs
forgotten/src/world/action/: abilities.rs  character.rs  damage.rs  error.rs  firing.rs  interaction.rs  mod.rs  movement.rs
forgotten/src/world/data/: mod.rs  npc.rs  player.rs  projectile.rs  stats.rs  terrain.rs  upgrade.rs  weapon.rs
forgotten/src/world/realtime/: animation.rs  fade.rs  mod.rs  movement.rs  particle.rs
forgotten/src/world/sys/: cull_dead.rs  mod.rs
launchers/native/: Cargo.toml
launchers/native/src/: ansi.rs  main.rs  wgpu.rs
launchers/wasm/: Cargo.toml  index.html  package-lock.json  package.json
launchers/wasm/src/: lib.rs  main.rs
util/macros/: Cargo.toml
util/macros/src/: lib.rs
util/rand-range/: Cargo.toml
util/rational/: Cargo.toml
util/vector/: Cargo.toml
util/vector/src/: lib.rs
