[package]
edition = "2021"
name    = "forgotten_app"
version = "0.1.0"

[features]
native       = ["gridbugs/storage_backend_file", "gridbugs/audio_backend_native"]
print_log    = []
print_stdout = []
web          = ["getrandom/js", "gridbugs/storage_backend_web", "gridbugs/audio_backend_web"]

[dependencies]
audio_data     = { path = "../audio-data" }
forgotten_game = { path = "../forgotten" }

gridbugs = { version = "0.4", features = [
    "storage_format_json",
    "storage_format_bincode",
    "audio",
    "direction",
    "direction_rand",
    "rgb_int",
    "coord_2d",
    "chargrid_serialize",
    "chargrid_gamepad",
    "visible_area_detection_serialize",
] }

log      = "0.4"
maplit   = "1.0"
serde    = { version = "1.0", features = ["serde_derive"] }
textwrap = "0.15"

getrandom     = { version = "0.2", features = ["js"] }
rand          = "0.8"
rand_isaac    = { version = "0.3", features = ["serde1"] }
rand_xorshift = { version = "0.3", features = ["serde1"] }
