[package]
edition = "2021"
name    = "forgotten_game"
version = "0.1.0"

[dependencies]
macros = { path = "../util/macros" }

gridbugs = { version = "0.2", features = ["backend_serialize", "rgb_int_rand"] }
log      = "0.4"
serde    = { version = "1.0", features = ["serde_derive"] }

# Random
rand       = "0.8"
rand_isaac = { version = "0.3", features = ["serde1"] }
rand_range = { path = "../util/rand-range" }
rational   = { path = "../util/rational" }

shipyard = "0.6"
