[package]
authors = ["Jacob LeCoq <lecoqjacob@gmail.com>"]
edition = "2021"
name    = "forgotten_web"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
gridbugs = { version = "0.4", features = [
    "chargrid_web_gamepad",
    "storage_backend_web",
    "audio_backend_web",
] }

forgotten_app = { path = "../../app", features = ["web", "print_log"] }
log           = "0.4"

wasm-bindgen = "0.2"
wasm-logger  = "0.2"
